# retro-game

./: .gitignore  Button.cpp  Button.h  CMakeLists.txt  CONTRIBUTING.md  Character.cpp  Character.h  Game.cpp  Game.h  Info.h  LICENSE  Menu.cpp  Menu.h  Monster.cpp  Monster.h  Player.cpp  Player.h  QuadTree.cpp  QuadTree.h  README.md  Settings.cpp  Settings.h  SubMenu.cpp  SubMenu.h  Unit.cpp  Unit.h  changes.txt  main.cpp  pull_request_template.md  worldCreator.cpp  worldCreator.h
.github/ISSUE_TEMPLATE/: bug_report.md  documentation-changes.md  feature_request.md  good-first-issue.md
Projectile/: Arrow.cpp  Arrow.h  FireBall.cpp  FireBall.h  Projectile.cpp  Projectile.h  Rock.cpp  Rock.h  SwordSwing.cpp  SwordSwing.h
Utilities/: Utils.cpp  Utils.h
abilities/: Ability.cpp  Ability.h  FireBlaze.cpp  FireBlaze.h  Heal.cpp  Heal.h
description/: 2.txt  4.txt  5.txt  6.txt  9.txt  controls.txt
description/classes/: 1.txt  3.txt  4.txt
description/enemies/: 6.txt  7.txt.orig
doc/: CHARACTER.md  CLASS-HIERARCHY.md  MONSTER.md  PLAYER.md  UNIT.md
enums/: Attitude.h  Biomes.h  BodyType.h  DamageType.h  MagicBranch.h
monsters/: Demon.cpp  Ghost.cpp  Ghost.h  Giant.cpp  Giant.h  GiantSpider.cpp  Skeleton.cpp  Skeleton.h  Succubus.cpp  ToxicLizard.cpp  ToxicLizard.h  Troll.cpp  Vampire.cpp  Vampire.h  Zombie.cpp  Zombie.h  monsters.h
particleSystem/: particleSystem.cpp  particleSystem.h
playerClasses/: Archer.cpp  Archer.h  DarkKnight.cpp  DarkKnight.h  ElementMage.cpp  ElementMage.h  FireMaster.h  Mage.h  Paladin.cpp  Paladin.h  Player.cpp  Player.h
src/: Game.h  Info.cpp  Map.h  Menu.cpp  Menu.h  Settings.h  SubMenu.cpp  Unit.cpp  main.cpp  worldCreator.cpp  worldCreator.h
src/GUI/: Button.cpp  Button.h  CMakeLists.txt  Info.cpp  Info.h  Menu.cpp  Menu.h  Settings.cpp  Settings.h  SubMenu.cpp  SubMenu.h  Textbox.cpp  Textbox.h  worldCreator.cpp  worldCreator.h
src/Projectile/: Arrow.cpp  Arrow.h  CMakeLists.txt  FireBall.cpp  FireBall.h  Projectile.cpp  Projectile.h  Rock.cpp  Rock.h  SpectralOrb.cpp  SpectralOrb.h  SwordSwing.cpp  SwordSwing.h  Trap.cpp  Trap.h
src/Utilities/: CMakeLists.txt  Utils.cpp  Utils.h
src/World/: CMakeLists.txt  Prop.h  Tile.h  World.cpp  World.h
src/core/: CMakeLists.txt  Character.cpp  Character.h  Game.cpp  Game.h  Unit.cpp  Unit.h
src/description/: 3.txt  7.txt  controls.txt
src/description/classes/: 2.txt  4.txt
src/description/enemies/: 1.txt.orig  10.txt.orig  2.txt.orig  4.txt  8.txt.orig
src/enums/: Attitude.h  Biomes.h  BodyType.h  CMakeLists.txt  DamageType.h  InfoMenus.h  Modes.h  ParticlesGame.h  PlayerClasses.h
src/monsters/: CMakeLists.txt  Demon.cpp  Demon.h  Ghost.cpp  Ghost.h  Giant.cpp  Giant.h  GiantSpider.cpp  GiantSpider.h  Monster.cpp  Monster.h  Skeleton.cpp  Skeleton.h  Succubus.cpp  Succubus.h  ToxicLizard.cpp  ToxicLizard.h  Troll.cpp  Troll.h  Vampire.cpp  Vampire.h  Zombie.cpp  Zombie.h  monsters.h
src/noise/: CMakeLists.txt  perlinNoise.cpp  perlinNoise.h
src/particleSystem/: CMakeLists.txt  particleSystem.cpp  particleSystem.h
src/playerClasses/: Archer.cpp  Archer.h  CMakeLists.txt  DarkKnight.cpp  DarkKnight.h  ElementMage.cpp  ElementMage.h  Paladin.cpp  Paladin.h  Player.cpp  Player.h
